assest/css/style.css
:root {
  --color1: #d35266;
  --color2: #888;
  --color3: #383838;
}

* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

html {
  font-size: 62.5%;
}

body {
  font-family: Helvetica, sans-serif;
  margin: 0;
  background-color: #f0f0f0;
}

.flex {
  display: flex;
}

.text-white {
  color: white;
}

/* ================================ mobile first =========================== */

/* ================================ header ================================= */

header {
  display: none;
}

/*  ------------------ black header --------------------------- */

.header-black {
  color: var(--color2);
  background-color: var(--color3);
  justify-content: center;
  align-items: center;
  position: sticky;
  top: 0;
  z-index: 1;
  font-size: 1.3rem;
  padding: 0 2%;
}

.header-black-left {
  width: 100%;
}

.h-black-left-list {
  list-style: none;
  align-items: center;
  padding-left: 0;
  justify-content: space-between;
}

.header-logo {
  width: 40px;
  height: 40px;
  margin-right: 1rem;
}

.nav-brand {
  align-items: center;
  font-size: 2rem;
  font-weight: bold;
}

.header-black-home a {
  color: var(--color1);
}

.h-black-left-list li {
  margin-right: 10px;
}

.post {
  display: none;
}

.header-black-right {
  display: none;
}

.profil-name {
  margin: 0 20px;
  font-weight: 700;
}

.profil-img {
  height: 40px;
  width: 40px;
  border-radius: 50%;
}

/* ========================================= Main ============================================ */

/* ========================================= Footer ========================================== */

footer {
  background-color: white;
  border-top: 1px solid var(--color2);
}

/* ------------ Footer top ----------------- */

.footer-top {
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding: 1rem 3rem;
}

.site-desc {
  width: 33rem;
  font-size: 1.5rem;
  color: var(--color2);
}

.site-desc-logo {
  justify-content: center;
  align-items: center;
}

.site-desc-logo img {
  width: 40px;
  height: 40px;
  margin-right: 1rem;
}

.categories {
  width: 25rem;
}

.categories-header {
  text-transform: uppercase;
  color: var(--color1);
  border-bottom: 2px solid var(--color1);
}

.categories-desc nav {
  width: 50%;
}

.navigation {
  width: 20rem;
  margin: 0 2rem;
}

.footer-t-list {
  list-style: none;
  color: var(--color2);
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.5rem;
  text-transform: capitalize;
}

.footer-top-form {
  width: 30rem;
  padding-top: 4.7rem;
}

.form-quest {
  margin-bottom: 1rem;
  font-size: 1.8rem;
}

.form-quest label {
  width: 30%;
  text-align: end;
  padding-right: 0.2rem;
  color: var(--color1);
  font-weight: bold;
}

.form-quest select {
  width: 70%;
}

/* ------------ Footer bottom ----------------- */

.copyright {
  border-top: 1px solid var(--color2);
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 3rem;
  font-size: 1.3rem;
  color: var(--color2);
}

/* ========================================= first breakpoint ================================ */

@media screen and (min-width: 768px) {
  /* ------------ Header ---------------- */

  header {
    display: block;
    width: 100%;
    background-color: var(--color1);
    text-align: center;
    padding-top: 70px;
    padding-bottom: 1rem;
  }

  h1 {
    font-size: 5rem;
    margin: 0;
  }

  .slogan {
    margin-top: 0;
    font-size: 2rem;
  }

  .header-select {
    height: 3rem;
  }

  .header-search {
    display: inline;
    padding: 0.5rem 1rem;
    border-radius: 0;
    border: none;
    text-align: center;
    background-color: var(--color3);
    color: var(--color2);
  }

  .header-search a {
    text-decoration: none;
    color: var(--color2);
  }

  .header-black {
    justify-content: space-between;
  }

  .h-black-left-list {
    justify-content: flex-start;
  }

  .post {
    display: block;
    text-transform: uppercase;
    background-color: var(--color1);
    padding: 1rem;
    border-radius: 2px;
  }

  .header-black-right {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-right: 0;
  }

  .header-form {
    font-size: 2rem;
  }

  .header-form input {
    height: 3rem;
  }

  /* ------------ Footer ----------------------- */

  .footer-top {
    flex-direction: row;
    align-items: flex-start;
  }

  .copyright {
    flex-direction: row;
  }
}

